# sessionmgr

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: codeql-new.yml  codeql.yml
client/: CMakeLists.txt
client/inc/sessionmgr/: sessionmgr.h
client/src/: sessionmgr.c
server/: CMakeLists.txt
server/src/: sessionmgr.c
test/: CMakeLists.txt  sessiontest.sh
test/src/: session.c
